crates/sith_python_parser/tests/snapshots/invalid_syntax@statements__match__as_pattern_0.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/statements/match/as_pattern_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..198,
        body: [
            Match(
                MatchStmt {
                    range: 0..197,
                    subject: Name(
                        NameExpr {
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 127..197,
                            pattern: MatchClass(
                                PatternMatchClass {
                                    range: 132..146,
                                    cls: Name(
                                        NameExpr {
                                            range: 133..139,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 140..146,
                                        patterns: [
                                            MatchAs(
                                                PatternMatchAs {
                                                    range: 141..142,
                                                    pattern: None,
                                                    name: Some(
                                                        Identifier {
                                                            id: Name("a"),
                                                            range: 141..142,
                                                        },
                                                    ),
                                                },
                                            ),
                                            MatchAs(
                                                PatternMatchAs {
                                                    range: 144..145,
                                                    pattern: None,
                                                    name: Some(
                                                        Identifier {
                                                            id: Name("b"),
                                                            range: 144..145,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    PassStmt {
                                        range: 193..197,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
3 |     #            class pattern
4 |     #            v
5 |     case (x as y)(a, b):
  |           ^^^^^^ Syntax Error: Invalid value for a class pattern
6 |     #     ^^^^^^
7 |     #    as-pattern
  |
